PushCMDPRJ/force-app/main/default/objects/SVMXC__Service__c/fields/SVMXC__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Effective_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>Date from which this service is available to your customers.</description>
    <inlineHelpText>Date from which this service is available to your customers.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>