PushCMDPRJ/force-app/main/default/objects/SVMXC__Service__c/fields/SVMXC__Qualifying_Criteria__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Qualifying_Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Qualifying Criteria</label>
    <referenceTo>SVMXC__ServiceMax_Processes__c</referenceTo>
    <relationshipName>Available_Services</relationshipName>
    <type>Lookup</type>
</CustomField>