PushCMDPRJ/force-app/main/default/objects/SVMXC__Service__c/fields/SVMXC__Service_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Service_Type__c</fullName>
    <description>Indicates the type of service. This helps in grouping similar types of services for reporting purposes.</description>
    <inlineHelpText>Indicates the type of service. This helps in grouping similar types of services for reporting purposes.</inlineHelpText>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SVMXC__Tracked_On__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Installation</fullName>
                <default>true</default>
                <label>Installation</label>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Deinstallation</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>