PushCMDPRJ/force-app/main/default/objects/SVMXC__Service__c/fields/SVMXC__Tracked_On__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Tracked_On__c</fullName>
    <label>Tracked On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Work Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>