PushCMDPRJ/force-app/main/default/objects/SVMXC__Service__c/listViews/SVMXC__All_Available_Services.listView-meta.xml
<ListView>
    <fullName>SVMXC__All_Available_Services</fullName>
    <columns>NAME</columns>
    <columns>SVMXC__Service_Type__c</columns>
    <columns>SVMXC__Tracked_On__c</columns>
    <columns>SVMXC__Effective_Date__c</columns>
    <columns>SVMXC__Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Available Services</label>
    <language>en_US</language>
</ListView>